Bug 254145 - [GTK] font-size-adjust does not work for non-Ahem fonts
Summary: [GTK] font-size-adjust does not work for non-Ahem fonts
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: ChangSeok Oh
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-19 22:42 PDT by ChangSeok Oh
Modified: 2023-03-23 23:02 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ChangSeok Oh 2023-03-19 22:42:06 PDT
The font-size-adjust CSS property only works for the GTK port only when the Ahem font is used.
If non-Ahem (Arial, Verdana, etc) fonts are specified, the adjusting CSS property does not work.
Comment 1 ChangSeok Oh 2023-03-19 23:13:46 PDT
Pull request: https://github.com/WebKit/WebKit/pull/11704
Comment 2 EWS 2023-03-23 23:02:05 PDT
Committed 262061@main (9bd41e74f05f): <https://commits.webkit.org/262061@main>

Reviewed commits have been landed. Closing PR #11704 and removing active labels.